# cookiecutter-python-package

./: .gitignore  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: test.yml
tests/: context.yaml  test_project_generation.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/actions/python-poetry-env/: action.yml
{{cookiecutter.project_slug}}/.github/actions/python-uv-env/: action.yml
{{cookiecutter.project_slug}}/.github/workflows/: cookiecutter.yml  dependencies.yml  draft_release.yml  release.yml  test.yml
