[project]
name = "cookiecutter-python-package"
version = "0.1.0"
description = "Cookiecutter template for Python packages"
authors = [{name = "Szymon Cader", email = "szymon.sc.cader@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.2.3",
    "pytest>=7.4.0",
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "flake8-to-ruff>=0.0.233",
    "black>=23.7.0",
    "pre-commit>=3.3.3",
    "python-redmine>=2.4.0",
    "cffi>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
